welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:42: error: Boolean does not take parameters
    				{
                                ^