welcome.lessons.welcome.traversal.Snake.scala.code
def arrive():Boolean =
{
  if (getDirection() == Direction.NORTH && estFaceMur())
  	
 			{
        return true
      }
  if(getDirection() == Direction.EAST)
  		{
        gauche()
        if(estFaceMur())
        	{
            return true
          }
      }
    if(getDirection() == Direction.WEST)
  		{
        droite()
        if(estFaceMur())
        	{
            return true
          }
      }
  
  return false }
  
override def run() {
  while(!arrive())
  { baisseBrosse()
   
    if (!estFaceMur())
    		{
          avance()
        }
    else if (getDirection() == Direction.EAST)
    				{
              gauche()
              avance()
              gauche()
            }
    else (getDirection() == Direction.WEST)
    				{
              droite()
              avance()
              droite()
            }
    
    
    
    
    
    
    
    
    
    
    
    
    
  }
}